--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,164 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AI-Powered Chatbot</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Chatbot</title>
+
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; }
-    #chat { flex: 1; padding: 10px; overflow-y: scroll; border: 1px solid #ccc; }
-    #message-form { display: flex; }
-    #message-input { flex: 1; padding: 10px; border: 1px solid #ccc; }
-    #send-button { padding: 10px; border: none; background: #28a745; color: #fff; }
-    .message { margin-bottom: 10px; }
-    .user { font-weight: bold; }
-    .bot { font-style: italic; }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    body {
+      height: 100vh;
+      background: #eef2f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #chat {
+      width: 100%;
+      max-width: 420px;
+      height: 85vh;
+      background: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+
+    #chat h2 {
+      padding: 14px;
+      text-align: center;
+      background: #2563eb;
+      color: white;
+      font-size: 18px;
+    }
+
+    #messages {
+      flex: 1;
+      padding: 12px;
+      overflow-y: auto;
+      background: #f9fafb;
+    }
+
+    .msg {
+      margin-bottom: 10px;
+      padding: 8px 10px;
+      max-width: 75%;
+      border-radius: 8px;
+      font-size: 14px;
+      line-height: 1.4;
+    }
+
+    .you {
+      background: #dbeafe;
+      color: #1e3a8a;
+      margin-left: auto;
+      border-bottom-right-radius: 2px;
+    }
+
+    .ai {
+      background: #e5e7eb;
+      color: #111827;
+      margin-right: auto;
+      border-bottom-left-radius: 2px;
+    }
+
+    .input-box {
+      display: flex;
+      padding: 10px;
+      border-top: 1px solid #ddd;
+      background: #fff;
+      gap: 8px;
+    }
+
+    #input {
+      flex: 1;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 14px;
+      outline: none;
+    }
+
+    #input:focus {
+      border-color: #2563eb;
+    }
+
+    button {
+      padding: 10px 14px;
+      background: #2563eb;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    button:hover {
+      background: #1d4ed8;
+    }
+
+    @media (max-width: 480px) {
+      #chat {
+        height: 100vh;
+        border-radius: 0;
+      }
+    }
   </style>
 </head>
-<body>
-  <div id="chat"></div>
-  <form id="message-form">
-    <input id="message-input" autocomplete="off" placeholder="Type your message here..." />
-    <button id="send-button">Send</button>
-  </form>
 
-  <!-- Include Socket.io client -->
+<body>
+
+  <div id="chat">
+    <h2>Jagan's Bot</h2>
+
+    <div id="messages"></div>
+
+    <div class="input-box">
+      <input id="input" placeholder="Type a message..." />
+      <button onclick="send()">Send</button>
+    </div>
+  </div>
+
   <script src="/socket.io/socket.io.js"></script>
-  <script src="chat.js"></script>
+  <script>
+    const socket = io();
+    const messages = document.getElementById("messages");
+    const input = document.getElementById("input");
+
+    function send() {
+      if (!input.value.trim()) return;
+
+      const userMsg = document.createElement("div");
+      userMsg.className = "msg you";
+      userMsg.innerText = input.value;
+      messages.appendChild(userMsg);
+
+      socket.emit("chat message", input.value);
+      input.value = "";
+      messages.scrollTop = messages.scrollHeight;
+    }
+
+    socket.on("chat message", (msg) => {
+      const aiMsg = document.createElement("div");
+      aiMsg.className = "msg ai";
+      aiMsg.innerText = msg;
+      messages.appendChild(aiMsg);
+      messages.scrollTop = messages.scrollHeight;
+    });
+
+    input.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") send();
+    });
+  </script>
+
 </body>
 </html>
