--- a/public/index.html
+++ b/public/index.html
@@ -4,115 +4,241 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI Chatbot</title>
+<!-- <style>
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+  }
 
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, Helvetica, sans-serif;
-    }
+  body {
+    height: 100vh;
+    background: #eef2f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    body {
-      height: 100vh;
-      background: #eef2f5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+  #chat {
+    width: 100%;
+    max-width: 420px;
+    height: 100vh;
+    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+  }
 
+  /* Header */
+  #chat h2 {
+    padding: 14px;
+    text-align: center;
+    background: linear-gradient(135deg, #2563eb, #1e40af);
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    flex-shrink: 0;
+  }
+
+  /* Messages */
+  #messages {
+    flex: 1;
+    padding: 12px;
+    overflow-y: auto;
+    background: #f9fafb;
+    scroll-behavior: smooth;
+  }
+
+  .msg {
+    margin-bottom: 10px;
+    padding: 10px 12px;
+    max-width: 80%;
+    border-radius: 12px;
+    font-size: 14px;
+    line-height: 1.5;
+    word-wrap: break-word;
+  }
+
+  .you {
+    background: #dbeafe;
+    color: #1e3a8a;
+    margin-left: auto;
+    border-bottom-right-radius: 4px;
+  }
+
+  .ai {
+    background: #e5e7eb;
+    color: #111827;
+    margin-right: auto;
+    border-bottom-left-radius: 4px;
+  }
+
+  /* Input box */
+  .input-box {
+    display: flex;
+    padding: 10px;
+    border-top: 1px solid #e5e7eb;
+    background: #ffffff;
+    gap: 8px;
+    flex-shrink: 0;
+  }
+
+  #input {
+    flex: 1;
+    padding: 12px;
+    border-radius: 8px;
+    border: 1px solid #d1d5db;
+    font-size: 15px;
+    outline: none;
+  }
+
+  #input:focus {
+    border-color: #2563eb;
+  }
+
+  button {
+    padding: 12px 16px;
+    background: #2563eb;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 500;
+  }
+
+  button:active {
+    transform: scale(0.96);
+  }
+
+  /* Desktop enhancement */
+  @media (min-width: 600px) {
     #chat {
-      width: 100%;
-      max-width: 420px;
       height: 85vh;
-      background: #ffffff;
-      border-radius: 10px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-      display: flex;
-      flex-direction: column;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
       overflow: hidden;
     }
+  }
+</style> -->
+<style>
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+  }
 
-    #chat h2 {
-      padding: 14px;
-      text-align: center;
-      background: #2563eb;
-      color: white;
-      font-size: 18px;
-    }
+  body {
+    height: 100vh;
+    background: #eef2f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    #messages {
-      flex: 1;
-      padding: 12px;
-      overflow-y: auto;
-      background: #f9fafb;
-    }
+  #chat {
+    width: 100%;
+    max-width: 420px;
+    height: 100vh;
+    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+  }
 
-    .msg {
-      margin-bottom: 10px;
-      padding: 8px 10px;
-      max-width: 75%;
-      border-radius: 8px;
-      font-size: 14px;
-      line-height: 1.4;
-    }
+  /* Header */
+  #chat h2 {
+    padding: 14px;
+    text-align: center;
+    background: linear-gradient(135deg, #2563eb, #1e40af);
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    flex-shrink: 0;
+  }
 
-    .you {
-      background: #dbeafe;
-      color: #1e3a8a;
-      margin-left: auto;
-      border-bottom-right-radius: 2px;
-    }
+  /* Messages */
+  #messages {
+    flex: 1;
+    padding: 12px;
+    overflow-y: auto;
+    background: #f9fafb;
+    scroll-behavior: smooth;
+  }
 
-    .ai {
-      background: #e5e7eb;
-      color: #111827;
-      margin-right: auto;
-      border-bottom-left-radius: 2px;
-    }
+  .msg {
+    margin-bottom: 10px;
+    padding: 10px 12px;
+    max-width: 80%;
+    border-radius: 12px;
+    font-size: 14px;
+    line-height: 1.5;
+    word-wrap: break-word;
+  }
 
-    .input-box {
-      display: flex;
-      padding: 10px;
-      border-top: 1px solid #ddd;
-      background: #fff;
-      gap: 8px;
-    }
+  .you {
+    background: #dbeafe;
+    color: #1e3a8a;
+    margin-left: auto;
+    border-bottom-right-radius: 4px;
+  }
 
-    #input {
-      flex: 1;
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-      outline: none;
-    }
+  .ai {
+    background: #e5e7eb;
+    color: #111827;
+    margin-right: auto;
+    border-bottom-left-radius: 4px;
+  }
 
-    #input:focus {
-      border-color: #2563eb;
-    }
+  /* Input box */
+  .input-box {
+    display: flex;
+    padding: 10px;
+    border-top: 1px solid #e5e7eb;
+    background: #ffffff;
+    gap: 8px;
+    flex-shrink: 0;
+  }
 
-    button {
-      padding: 10px 14px;
-      background: #2563eb;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 14px;
-    }
+  #input {
+    flex: 1;
+    padding: 12px;
+    border-radius: 8px;
+    border: 1px solid #d1d5db;
+    font-size: 15px;
+    outline: none;
+  }
 
-    button:hover {
-      background: #1d4ed8;
-    }
+  #input:focus {
+    border-color: #2563eb;
+  }
 
-    @media (max-width: 480px) {
-      #chat {
-        height: 100vh;
-        border-radius: 0;
-      }
+  button {
+    padding: 12px 16px;
+    background: #2563eb;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 500;
+  }
+
+  button:active {
+    transform: scale(0.96);
+  }
+
+  /* Desktop enhancement */
+  @media (min-width: 600px) {
+    #chat {
+      height: 85vh;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+      overflow: hidden;
     }
-  </style>
+  }
+</style>
+
 </head>
 
 <body>
