--- a/public/index.html
+++ b/public/index.html
@@ -4,241 +4,254 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI Chatbot</title>
-<!-- <style>
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-  }
-
-  body {
-    height: 100vh;
-    background: #eef2f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #chat {
-    width: 100%;
-    max-width: 420px;
-    height: 100vh;
-    background: #ffffff;
-    display: flex;
-    flex-direction: column;
-  }
-
-  /* Header */
-  #chat h2 {
-    padding: 14px;
-    text-align: center;
-    background: linear-gradient(135deg, #2563eb, #1e40af);
-    color: white;
-    font-size: 18px;
-    font-weight: 600;
-    flex-shrink: 0;
-  }
-
-  /* Messages */
-  #messages {
-    flex: 1;
-    padding: 12px;
-    overflow-y: auto;
-    background: #f9fafb;
-    scroll-behavior: smooth;
-  }
-
-  .msg {
-    margin-bottom: 10px;
-    padding: 10px 12px;
-    max-width: 80%;
-    border-radius: 12px;
-    font-size: 14px;
-    line-height: 1.5;
-    word-wrap: break-word;
-  }
-
-  .you {
-    background: #dbeafe;
-    color: #1e3a8a;
-    margin-left: auto;
-    border-bottom-right-radius: 4px;
-  }
-
-  .ai {
-    background: #e5e7eb;
-    color: #111827;
-    margin-right: auto;
-    border-bottom-left-radius: 4px;
-  }
-
-  /* Input box */
-  .input-box {
-    display: flex;
-    padding: 10px;
-    border-top: 1px solid #e5e7eb;
-    background: #ffffff;
-    gap: 8px;
-    flex-shrink: 0;
-  }
-
-  #input {
-    flex: 1;
-    padding: 12px;
-    border-radius: 8px;
-    border: 1px solid #d1d5db;
-    font-size: 15px;
-    outline: none;
-  }
-
-  #input:focus {
-    border-color: #2563eb;
-  }
-
-  button {
-    padding: 12px 16px;
-    background: #2563eb;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 15px;
-    font-weight: 500;
-  }
-
-  button:active {
-    transform: scale(0.96);
-  }
-
-  /* Desktop enhancement */
-  @media (min-width: 600px) {
-    #chat {
-      height: 85vh;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
-      overflow: hidden;
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-  }
-</style> -->
-<style>
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-  }
 
-  body {
-    height: 100vh;
-    background: #eef2f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #chat {
-    width: 100%;
-    max-width: 420px;
-    height: 100vh;
-    background: #ffffff;
-    display: flex;
-    flex-direction: column;
-  }
-
-  /* Header */
-  #chat h2 {
-    padding: 14px;
-    text-align: center;
-    background: linear-gradient(135deg, #2563eb, #1e40af);
-    color: white;
-    font-size: 18px;
-    font-weight: 600;
-    flex-shrink: 0;
-  }
-
-  /* Messages */
-  #messages {
-    flex: 1;
-    padding: 12px;
-    overflow-y: auto;
-    background: #f9fafb;
-    scroll-behavior: smooth;
-  }
-
-  .msg {
-    margin-bottom: 10px;
-    padding: 10px 12px;
-    max-width: 80%;
-    border-radius: 12px;
-    font-size: 14px;
-    line-height: 1.5;
-    word-wrap: break-word;
-  }
-
-  .you {
-    background: #dbeafe;
-    color: #1e3a8a;
-    margin-left: auto;
-    border-bottom-right-radius: 4px;
-  }
-
-  .ai {
-    background: #e5e7eb;
-    color: #111827;
-    margin-right: auto;
-    border-bottom-left-radius: 4px;
-  }
-
-  /* Input box */
-  .input-box {
-    display: flex;
-    padding: 10px;
-    border-top: 1px solid #e5e7eb;
-    background: #ffffff;
-    gap: 8px;
-    flex-shrink: 0;
-  }
-
-  #input {
-    flex: 1;
-    padding: 12px;
-    border-radius: 8px;
-    border: 1px solid #d1d5db;
-    font-size: 15px;
-    outline: none;
-  }
-
-  #input:focus {
-    border-color: #2563eb;
-  }
-
-  button {
-    padding: 12px 16px;
-    background: #2563eb;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 15px;
-    font-weight: 500;
-  }
-
-  button:active {
-    transform: scale(0.96);
-  }
-
-  /* Desktop enhancement */
-  @media (min-width: 600px) {
-    #chat {
-      height: 85vh;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
-      overflow: hidden;
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
     }
-  }
-</style>
 
+    #chat {
+      width: 100%;
+      max-width: 800px;
+      height: 90vh;
+      max-height: 700px;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      animation: slideUp 0.5s ease-out;
+    }
+
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    h2 {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      padding: 25px 30px;
+      font-size: 24px;
+      font-weight: 600;
+      text-align: center;
+      border-bottom: 3px solid rgba(102, 126, 234, 0.3);
+      letter-spacing: 0.5px;
+    }
+
+    #messages {
+      flex: 1;
+      padding: 25px;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      background: #f8f9fa;
+    }
+
+    #messages::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    #messages::-webkit-scrollbar-track {
+      background: #e9ecef;
+      border-radius: 10px;
+    }
+
+    #messages::-webkit-scrollbar-thumb {
+      background: #667eea;
+      border-radius: 10px;
+    }
+
+    #messages::-webkit-scrollbar-thumb:hover {
+      background: #764ba2;
+    }
+
+    .msg {
+      max-width: 70%;
+      padding: 15px 20px;
+      border-radius: 18px;
+      line-height: 1.5;
+      font-size: 15px;
+      animation: fadeIn 0.3s ease-out;
+      word-wrap: break-word;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .msg.you {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      align-self: flex-end;
+      border-bottom-right-radius: 4px;
+    }
+
+    .msg.ai {
+      background: white;
+      color: #333;
+      align-self: flex-start;
+      border-bottom-left-radius: 4px;
+      border: 1px solid #e9ecef;
+    }
+
+    .input-box {
+      padding: 20px 25px;
+      background: white;
+      border-top: 1px solid #e9ecef;
+      display: flex;
+      gap: 12px;
+      align-items: center;
+    }
+
+    #input {
+      flex: 1;
+      padding: 15px 20px;
+      border: 2px solid #e9ecef;
+      border-radius: 25px;
+      font-size: 15px;
+      outline: none;
+      transition: all 0.3s ease;
+      font-family: inherit;
+    }
+
+    #input:focus {
+      border-color: #667eea;
+      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+    }
+
+    button {
+      padding: 15px 30px;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      border: none;
+      border-radius: 25px;
+      font-size: 15px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+    }
+
+    button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(102, 126, 234, 0.5);
+    }
+
+    button:active {
+      transform: translateY(0);
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      body {
+        padding: 10px;
+      }
+
+      #chat {
+        height: 95vh;
+        max-height: none;
+        border-radius: 15px;
+      }
+
+      h2 {
+        padding: 20px;
+        font-size: 20px;
+      }
+
+      #messages {
+        padding: 15px;
+        gap: 12px;
+      }
+
+      .msg {
+        max-width: 85%;
+        padding: 12px 16px;
+        font-size: 14px;
+      }
+
+      .input-box {
+        padding: 15px;
+        gap: 10px;
+      }
+
+      #input {
+        padding: 12px 16px;
+        font-size: 14px;
+      }
+
+      button {
+        padding: 12px 20px;
+        font-size: 14px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h2 {
+        font-size: 18px;
+        padding: 18px;
+      }
+
+      .msg {
+        max-width: 90%;
+        padding: 10px 14px;
+        font-size: 13px;
+      }
+
+      button {
+        padding: 12px 18px;
+        font-size: 13px;
+      }
+    }
+
+    /* Landscape mode for mobile */
+    @media (max-height: 500px) and (orientation: landscape) {
+      #chat {
+        height: 98vh;
+      }
+
+      h2 {
+        padding: 15px;
+        font-size: 18px;
+      }
+
+      #messages {
+        padding: 12px;
+      }
+
+      .input-box {
+        padding: 12px 15px;
+      }
+    }
+  </style>
 </head>
 
 <body>
