--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,19 @@
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 20px;
+      padding: 10px;
+      overflow: hidden;
     }
 
     #chat {
       width: 100%;
       max-width: 800px;
-      height: 90vh;
-      max-height: 700px;
+      height: 100%;
+      max-height: 100%;
       background: rgba(255, 255, 255, 0.95);
       backdrop-filter: blur(10px);
       border-radius: 20px;
@@ -173,17 +174,17 @@
     /* Responsive Design */
     @media (max-width: 768px) {
       body {
-        padding: 10px;
+        padding: 0;
       }
 
       #chat {
-        height: 95vh;
-        max-height: none;
-        border-radius: 15px;
+        height: 100vh;
+        max-height: 100vh;
+        border-radius: 0;
       }
 
       h2 {
-        padding: 20px;
+        padding: 18px 20px;
         font-size: 20px;
       }
 
@@ -199,7 +200,7 @@
       }
 
       .input-box {
-        padding: 15px;
+        padding: 12px 15px;
         gap: 10px;
       }
 
@@ -217,7 +218,7 @@
     @media (max-width: 480px) {
       h2 {
         font-size: 18px;
-        padding: 18px;
+        padding: 16px 18px;
       }
 
       .msg {
@@ -230,12 +231,16 @@
         padding: 12px 18px;
         font-size: 13px;
       }
+
+      #input {
+        padding: 11px 14px;
+      }
     }
 
     /* Landscape mode for mobile */
     @media (max-height: 500px) and (orientation: landscape) {
       #chat {
-        height: 78vh;
+        height: 98vh;
       }
 
       h2 {
