--- a/public/index.html
+++ b/public/index.html
@@ -14,19 +14,18 @@
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 10px;
-      overflow: hidden;
+      padding: 20px;
     }
 
     #chat {
       width: 100%;
       max-width: 800px;
-      height: 100%;
-      max-height: 100%;
+      height: 90vh;
+      max-height: 700px;
       background: rgba(255, 255, 255, 0.95);
       backdrop-filter: blur(10px);
       border-radius: 20px;
@@ -57,19 +56,16 @@
       text-align: center;
       border-bottom: 3px solid rgba(102, 126, 234, 0.3);
       letter-spacing: 0.5px;
-      flex-shrink: 0;
     }
 
     #messages {
       flex: 1;
       padding: 25px;
       overflow-y: auto;
-      overflow-x: hidden;
       display: flex;
       flex-direction: column;
       gap: 15px;
       background: #f8f9fa;
-      min-height: 0;
     }
 
     #messages::-webkit-scrollbar {
@@ -134,7 +130,6 @@
       display: flex;
       gap: 12px;
       align-items: center;
-      flex-shrink: 0;
     }
 
     #input {
@@ -178,17 +173,17 @@
     /* Responsive Design */
     @media (max-width: 768px) {
       body {
-        padding: 0;
+        padding: 10px;
       }
 
       #chat {
-        height: 100vh;
-        max-height: 100vh;
-        border-radius: 0;
+        height: 95vh;
+        max-height: none;
+        border-radius: 15px;
       }
 
       h2 {
-        padding: 18px 20px;
+        padding: 20px;
         font-size: 20px;
       }
 
@@ -204,7 +199,7 @@
       }
 
       .input-box {
-        padding: 12px 15px;
+        padding: 15px;
         gap: 10px;
       }
 
@@ -222,7 +217,7 @@
     @media (max-width: 480px) {
       h2 {
         font-size: 18px;
-        padding: 16px 18px;
+        padding: 18px;
       }
 
       .msg {
@@ -235,16 +230,12 @@
         padding: 12px 18px;
         font-size: 13px;
       }
-
-      #input {
-        padding: 11px 14px;
-      }
     }
 
     /* Landscape mode for mobile */
     @media (max-height: 500px) and (orientation: landscape) {
       #chat {
-        height: 98vh;
+        height:78vh;
       }
 
       h2 {
