--- a/public/index.html
+++ b/public/index.html
@@ -2,262 +2,337 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Chatbot</title>
+  <title>Jagan's Bot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <style>
-    * {
+    /* Reset */
+    *, *::before, *::after {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
+    }
+
+    :root {
+      --bg: #020617;
+      --surface: #020617;
+      --surface-soft: #020617;
+      --border-subtle: #1f2937;
+      --accent: #3b82f6;
+      --accent-soft: rgba(37, 99, 235, 0.12);
+      --text-main: #e5e7eb;
+      --text-muted: #6b7280;
+      --you-bubble: #2563eb;
+      --ai-bubble: #111827;
+    }
+
+    body.light-mode {
+      --bg: #879ac0;
+      --surface: #ffffff;
+      --surface-soft: #f9fafb;
+      --border-subtle: #e5e7eb;
+      --accent: #2563eb;
+      --accent-soft: rgba(37, 99, 235, 0.08);
+      --text-main: #111827;
+      --text-muted: #9ca3af;
+      --you-bubble: #2563eb;
+      --ai-bubble: #f3f4f6;
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       min-height: 100vh;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
+        "Segoe UI", sans-serif;
+      background-color: var(--bg);
+      color: var(--text-main);
       display: flex;
-      justify-content: center;
       align-items: center;
-      padding: 20px;
+      justify-content: center;
+      padding: 16px;
+      transition: background-color 0.3s ease, color 0.2s ease;
     }
 
+    /* Layout */
     #chat {
       width: 100%;
-      max-width: 800px;
-      height: 90vh;
-      max-height: 700px;
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
-      border-radius: 20px;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+      max-width: 420px;
+      height: 80vh;
+      max-height: 680px;
+      background-color: var(--surface);
+      border-radius: 18px;
+      border: 1px solid var(--border-subtle);
       display: flex;
       flex-direction: column;
       overflow: hidden;
-      animation: slideUp 0.5s ease-out;
     }
 
-    @keyframes slideUp {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    /* Header */
+    #chat > header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 8px;
+      padding: 12px 14px;
+      border-bottom: 1px solid var(--border-subtle);
+      background-color: var(--surface-soft);
     }
 
-    h2 {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
-      padding: 25px 30px;
-      font-size: 24px;
+    .title-wrap {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+    }
+
+    .title-wrap span:nth-child(1) {
+      font-size: 0.78rem;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      color: var(--accent);
       font-weight: 600;
-      text-align: center;
-      border-bottom: 3px solid rgba(102, 126, 234, 0.3);
-      letter-spacing: 0.5px;
     }
 
+    .title-wrap span:nth-child(2) {
+      font-size: 0.98rem;
+      font-weight: 600;
+    }
+
+    .title-wrap span:nth-child(3) {
+      font-size: 0.75rem;
+      color: var(--text-muted);
+    }
+
+    /* Theme toggle (simple, modern) */
+    #theme-toggle {
+      border: 1px solid var(--border-subtle);
+      background-color: var(--surface);
+      border-radius: 999px;
+      width: 50px;
+      height: 26px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 4px;
+      cursor: pointer;
+      position: relative;
+      transition:
+        background-color 0.2s ease,
+        border-color 0.2s ease,
+        box-shadow 0.2s ease;
+    }
+
+    #theme-toggle:hover {
+      box-shadow: 0 0 0 1px var(--accent-soft);
+    }
+
+    #theme-toggle svg {
+      width: 14px;
+      height: 14px;
+    }
+
+    .sun-icon circle,
+    .sun-icon line {
+      stroke: #facc15;
+      stroke-width: 1.5;
+      fill: none;
+    }
+
+    .moon-icon path {
+      fill: #e5e7eb;
+    }
+
+    .sun-icon, .moon-icon {
+      transition: opacity 0.2s ease, transform 0.2s ease;
+    }
+
+    #theme-toggle::after {
+      content: "";
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      width: 20px;
+      height: 20px;
+      border-radius: 999px;
+      background-color: #f9fafb;
+      transition: transform 0.2s ease, background-color 0.2s ease;
+    }
+
+    body.dark-mode .sun-icon {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    body.dark-mode .moon-icon {
+      opacity: 0;
+      transform: translateX(6px);
+    }
+
+    body.light-mode .sun-icon {
+      opacity: 0;
+      transform: translateX(-6px);
+    }
+    body.light-mode .moon-icon {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    body.light-mode #theme-toggle::after {
+      transform: translateX(22px);
+      background-color: #111827;
+    }
+
+    /* Messages */
     #messages {
       flex: 1;
-      padding: 25px;
+      padding: 12px 10px;
       overflow-y: auto;
       display: flex;
       flex-direction: column;
-      gap: 15px;
-      background: #f8f9fa;
+      gap: 8px;
+      scroll-behavior: smooth;
+      scrollbar-width: thin;
+      scrollbar-color: var(--border-subtle) transparent;
     }
 
     #messages::-webkit-scrollbar {
-      width: 8px;
+      width: 6px;
     }
-
-    #messages::-webkit-scrollbar-track {
-      background: #e9ecef;
-      border-radius: 10px;
-    }
-
     #messages::-webkit-scrollbar-thumb {
-      background: #667eea;
-      border-radius: 10px;
-    }
-
-    #messages::-webkit-scrollbar-thumb:hover {
-      background: #764ba2;
+      background-color: var(--border-subtle);
+      border-radius: 999px;
     }
 
     .msg {
-      max-width: 70%;
-      padding: 15px 20px;
-      border-radius: 18px;
-      line-height: 1.5;
-      font-size: 15px;
-      animation: fadeIn 0.3s ease-out;
+      max-width: 75%;
+      font-size: 0.88rem;
+      line-height: 1.4;
+      padding: 7px 10px;
+      border-radius: 14px;
       word-wrap: break-word;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(10px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
     }
 
     .msg.you {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
-      align-self: flex-end;
+      margin-left: auto;
+      background-color: var(--you-bubble);
+      color: #eff6ff;
       border-bottom-right-radius: 4px;
     }
 
     .msg.ai {
-      background: white;
-      color: #333;
-      align-self: flex-start;
+      margin-right: auto;
+      background-color: var(--ai-bubble);
+      color: var(--text-main);
       border-bottom-left-radius: 4px;
-      border: 1px solid #e9ecef;
+      border: 1px solid var(--border-subtle);
     }
 
+    /* Input area */
     .input-box {
-      padding: 20px 25px;
-      background: white;
-      border-top: 1px solid #e9ecef;
+      border-top: 1px solid var(--border-subtle);
+      background-color: var(--surface-soft);
+      padding: 8px 10px;
       display: flex;
-      gap: 12px;
       align-items: center;
+      gap: 8px;
     }
 
-    #input {
+    .input-box input {
       flex: 1;
-      padding: 15px 20px;
-      border: 2px solid #e9ecef;
-      border-radius: 25px;
-      font-size: 15px;
+      border-radius: 999px;
+      border: 1px solid var(--border-subtle);
+      padding: 8px 11px;
+      font-size: 0.88rem;
       outline: none;
-      transition: all 0.3s ease;
-      font-family: inherit;
+      background-color: var(--surface);
+      color: var(--text-main);
+      transition:
+        border-color 0.18s ease,
+        box-shadow 0.18s ease,
+        background-color 0.18s ease;
     }
 
-    #input:focus {
-      border-color: #667eea;
-      box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+    .input-box input::placeholder {
+      color: var(--text-muted);
     }
 
-    button {
-      padding: 15px 30px;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
+    .input-box input:focus {
+      border-color: var(--accent);
+      box-shadow: 0 0 0 1px var(--accent-soft);
+    }
+
+    .input-box button {
+      border-radius: 999px;
       border: none;
-      border-radius: 25px;
-      font-size: 15px;
+      padding: 8px 14px;
+      font-size: 0.78rem;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      background-color: var(--accent);
+      color: #eff6ff;
       font-weight: 600;
       cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+      transition:
+        background-color 0.18s ease,
+        transform 0.08s ease,
+        box-shadow 0.18s ease;
+      box-shadow: 0 3px 8px rgba(15, 23, 42, 0.4);
     }
 
-    button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(102, 126, 234, 0.5);
+    .input-box button:hover {
+      background-color: #1d4ed8;
+      box-shadow: 0 4px 10px rgba(15, 23, 42, 0.5);
     }
 
-    button:active {
-      transform: translateY(0);
+    .input-box button:active {
+      transform: translateY(1px);
+      box-shadow: 0 2px 5px rgba(15, 23, 42, 0.6);
     }
 
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      body {
-        padding: 10px;
-      }
-
+    /* Responsive */
+    @media (max-width: 640px) {
       #chat {
-        height: 95vh;
+        height: 92vh;
         max-height: none;
-        border-radius: 15px;
-      }
-
-      h2 {
-        padding: 20px;
-        font-size: 20px;
-      }
-
-      #messages {
-        padding: 15px;
-        gap: 12px;
-      }
-
-      .msg {
-        max-width: 85%;
-        padding: 12px 16px;
-        font-size: 14px;
-      }
-
-      .input-box {
-        padding: 15px;
-        gap: 10px;
-      }
-
-      #input {
-        padding: 12px 16px;
-        font-size: 14px;
-      }
-
-      button {
-        padding: 12px 20px;
-        font-size: 14px;
+        border-radius: 14px;
       }
     }
 
     @media (max-width: 480px) {
-      h2 {
-        font-size: 18px;
-        padding: 18px;
+      body {
+        padding: 6px;
       }
-
-      .msg {
-        max-width: 90%;
-        padding: 10px 14px;
-        font-size: 13px;
-      }
-
-      button {
-        padding: 12px 18px;
-        font-size: 13px;
-      }
-    }
-
-    /* Landscape mode for mobile */
-    @media (max-height: 500px) and (orientation: landscape) {
       #chat {
-        height:78vh;
-      }
-
-      h2 {
-        padding: 15px;
-        font-size: 18px;
-      }
-
-      #messages {
-        padding: 12px;
-      }
-
-      .input-box {
-        padding: 12px 15px;
+        height: 100vh;
+        border-radius: 0;
+        border-left: none;
+        border-right: none;
       }
     }
   </style>
 </head>
 
 <body>
-
   <div id="chat">
-    <h2>Jagan's Bot</h2>
+    <header>
+      <div class="title-wrap">
+        <span>Jagan's Bot</span>
+      </div>
+
+      <button id="theme-toggle" aria-label="Toggle theme">
+        <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <circle cx="12" cy="12" r="5" />
+          <line x1="12" y1="1" x2="12" y2="3" />
+          <line x1="12" y1="21" x2="12" y2="23" />
+          <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+          <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+          <line x1="1" y1="12" x2="3" y2="12" />
+          <line x1="21" y1="12" x2="23" y2="12" />
+          <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+          <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
+        </svg>
+        <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
+        </svg>
+      </button>
+    </header>
 
     <div id="messages"></div>
 
@@ -269,7 +344,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io();
+    const socket = typeof io !== "undefined" ? io() : null;
     const messages = document.getElementById("messages");
     const input = document.getElementById("input");
 
@@ -281,23 +356,46 @@
       userMsg.innerText = input.value;
       messages.appendChild(userMsg);
 
-      socket.emit("chat message", input.value);
+      if (socket) {
+        socket.emit("chat message", input.value);
+      }
+
       input.value = "";
       messages.scrollTop = messages.scrollHeight;
     }
 
-    socket.on("chat message", (msg) => {
-      const aiMsg = document.createElement("div");
-      aiMsg.className = "msg ai";
-      aiMsg.innerText = msg;
-      messages.appendChild(aiMsg);
-      messages.scrollTop = messages.scrollHeight;
-    });
+    if (socket) {
+      socket.on("chat message", (msg) => {
+        const aiMsg = document.createElement("div");
+        aiMsg.className = "msg ai";
+        aiMsg.innerText = msg;
+        messages.appendChild(aiMsg);
+        messages.scrollTop = messages.scrollHeight;
+      });
+    }
 
     input.addEventListener("keydown", (e) => {
       if (e.key === "Enter") send();
     });
-  </script>
 
+    // Theme toggle
+    const themeToggle = document.getElementById("theme-toggle");
+    const body = document.body;
+    const savedTheme = localStorage.getItem("theme") || "dark-mode";
+    body.classList.add(savedTheme);
+
+    themeToggle.addEventListener("click", (e) => {
+      e.stopPropagation();
+      if (body.classList.contains("dark-mode")) {
+        body.classList.remove("dark-mode");
+        body.classList.add("light-mode");
+        localStorage.setItem("theme", "light-mode");
+      } else {
+        body.classList.remove("light-mode");
+        body.classList.add("dark-mode");
+        localStorage.setItem("theme", "dark-mode");
+      }
+    });
+  </script>
 </body>
 </html>
