--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8" />
   <title>Jagan's Bot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <style>
     /* Reset */
     *, *::before, *::after {
       box-sizing: border-box;
       margin: 0;
-      padding: 0;
+      padding: 0; 
     }
 
     /* CSS Variables */
@@ -28,9 +27,9 @@
     }
 
     body.light-mode {
-      --bg: #f3f4f6;
-      --surface: #ffffff;
-      --surface-soft: #f9fafb;
+      --bg: #6089dd;
+      --surface: #eaf0f0;
+      --surface-soft: #a8b1f5;
       --border-subtle: #e5e7eb;
       --accent: #2563eb;
       --accent-soft: rgba(37, 99, 235, 0.08);
@@ -311,9 +310,7 @@
   <div id="chat">
     <header>
       <div class="title-wrap">
-        <span>Assistant</span>
-        <span>Jagan's Bot</span>
-        <span>Ask anything, anytime</span>
+        <span style="color:rgb(48, 56, 208)">Jagan's Bot</span>
       </div>
 
       <button id="theme-toggle" aria-label="Toggle theme">
